lasp/c/lasp_decimation.h

typedef struct Decimator_s Decimator;
typedef enum DEC_FAC_e {
    DEC_FAC_4 = 0,              // Decimate by a factor of 4
} DEC_FAC;
/** 
 * Create a decimation filter for a given number of channels and
 * decimation factor
 *
 * @param nchannels Number of channels

 * @param d Decimation factor. Should be one of the implemented
 * ones. (TODO: add more. At this point we have only a decimation
 * factor of 4 implemented)
 *
 * @return Decimator handle. NULL on error
 */
Decimator* Decimator_create(us nchannels,DEC_FAC d);
/** 
 * Decimate given samples
 *
 * @param samples 
 *
 * @return Decimated samples. Can be an empty array.
 */
dmat Decimator_decimate(Decimator* dec,const dmat* samples);
/** 
 * Free memory corresponding to Decimator
 *
 * @param dec Decimator handle.
 */
void Decimator_free(Decimator* dec);